# ZcVersionBox

./: CMakeLists.txt  CONTRIBUTING.md  GlobalConstants.h  README.md  main.cpp  mainwindow.cpp  res.qrc
lib/cmake/: ElaWidgetToolsTargets.cmake
mainwindow_child/: homepage.cpp  homepage.ui  homepagechild_backupfile.cpp  homepagechild_backupfile.h  homepagechild_trackfile.cpp  homepagechild_trackfile.h  homepagechild_trackfile.ui  settingpage.h
utils/: fileutils.cpp  fileutils.h
windows/: mainwindow.cpp  mainwindow.h
windows/mainwindow_child/: settingpage.cpp  settingpage.ui
windows/mainwindow_child/homepage/: homepage.cpp  homepage.h  homepage.ui  homepagechild_backupfile.cpp  homepagechild_backupfile.h  homepagechild_backupfile.ui  homepagechild_trackfile.cpp  homepagechild_trackfile.h
windows/mainwindow_child/settingpage/: settingpage.cpp  settingpage.ui
